# rust_wasm_project

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  index.scss  trunk.toml
public/: index.html
src/: app.rs
